[package]
name = "githydra"
version = "0.1.0"
edition = "2021"
authors = ["grokkt <156196590+grokkt@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
thiserror = "1.0.58"

[[bin]]
name = "githydra"
path = "src/main.rs"
